# furiosa-mlir-private

./: .clang-format  .gitmodules  CMakeLists.txt  Makefile  README.md
docs/: ConversionPasses.md  FuriosaOps.md  FuriosaTypes.md
docs/Func/: FuncPasses.md
docs/Furiosa/: FuriosaAttrs.md  FuriosaOps.md  FuriosaTaskOps.md  FuriosaTaskSfrOps.md  FuriosaTypes.md
docs/Host/: HostOps.md
docs/Linalg/: LinalgPasses.md
docs/Task/: TaskDialect.md  TaskTypes.md
furiosa-mlir-private/: .gitignore  CMakeLists.txt  Makefile  README.md
furiosa-mlir-private/docs/: ConversionPasses.md  FuriosaDialect.md  FuriosaOps.md  FuriosaTypes.md
furiosa-mlir-private/docs/Furiosa/: FuriosaAttributes.md  FuriosaDialect.md  FuriosaOps.md  FuriosaPasses.md  FuriosaTaskOps.md  FuriosaTucOps.md
furiosa-mlir-private/docs/Host/: HostAttrs.md  HostDialect.md  HostOps.md  HostTypes.md
furiosa-mlir-private/docs/Task/: TaskOps.md  TaskTypes.md
furiosa-mlir-private/include/furiosa-mlir/: InitAll.h
furiosa-mlir-private/include/furiosa-mlir-c/Dialect/: Furiosa.h  Host.h  Task.h
furiosa-mlir-private/include/furiosa-mlir-c/ExecutionEngine/: ExecutionEngine.h
furiosa-mlir-private/include/furiosa-mlir/Conversion/: Passes.h  Passes.td
furiosa-mlir-private/include/furiosa-mlir/ExecutionEngine/: DeviceRuntime.h  ExecutionEngine.h  RenegadeRuntime.h
furiosa-mlir-private/lib/: CMakeLists.txt  InitAll.cpp
furiosa-mlir-private/lib/Bindings/Python/: DialectFuriosa.cpp  DialectHost.cpp  ExecutionEngineModule.cpp  FuriosaPasses.cpp
furiosa-mlir-private/lib/CAPI/: CMakeLists.txt
furiosa-mlir-private/lib/CAPI/Dialect/: CMakeLists.txt  Furiosa.cpp  Task.cpp
furiosa-mlir-private/lib/CAPI/ExecutionEngine/: ExecutionEngine.cpp
furiosa-mlir-private/lib/CAPI/RegisterEverything/: RegisterEverything.cpp
furiosa-mlir-private/lib/Conversion/: CMakeLists.txt
furiosa-mlir-private/lib/Conversion/FuncToFuriosaHost/: CMakeLists.txt  FuncToFuriosaHost.cpp
furiosa-mlir-private/lib/Conversion/FuriosaToFuriosaTask/: CMakeLists.txt  FuriosaToFuriosaTask.cpp
furiosa-mlir-private/lib/Conversion/LinalgToFuriosa/: CMakeLists.txt  LinalgToFuriosa.cpp
furiosa-mlir-private/lib/Dialect/: CMakeLists.txt
furiosa-mlir-private/lib/Dialect/Task/: TaskDialect.cpp  TaskOps.cpp
furiosa-mlir-private/lib/ExecutionEngine/: CMakeLists.txt  DeviceRuntime.cpp  ExecutionEngine.cpp  JitRunner.cpp  RenegadeRuntime.cpp
furiosa-mlir-private/python/: CMakeLists.txt
furiosa-mlir-private/python/furiosa-mlir/: compiler.py  execution_engine.py
furiosa-mlir-private/python/furiosa-mlir/dialects/: FuriosaOps.td  HostOps.td  TaskOps.td  furiosa.py  host.py
furiosa-mlir-private/python/furiosa-mlir/runtime/: np_to_tensor.py
furiosa-mlir-private/test/Dialect/Furiosa/: address.mlir  example.mlir  example_host.mlir  loop.mlir  (+4 more)
furiosa-mlir-private/test/python/: compiler.py  execution_engine.py
furiosa-mlir-private/tools/: CMakeLists.txt
furiosa-mlir-private/tools/furiosa-mlir-opt/: CMakeLists.txt  furiosa-mlir-opt.cpp
furiosa-mlir-private/tools/furiosa-mlir-runner/: CMakeLists.txt  furiosa-mlir-runner.cpp
furiosa-mlir-private/tools/furiosa-mlir-translate/: CMakeLists.txt  furiosa-mlir-translate.cpp
furiosa-mlir-private/tools/furiosa-runner/: CMakeLists.txt  furiosa-runner.cpp
include/: CMakeLists.txt
include/furiosa-mlir/: InitAll.h
include/furiosa-mlir-c/: RegisterEverything.h
include/furiosa-mlir-c/ExecutionEngine/: ExecutionEngine.h
include/furiosa-mlir/Conversion/: CMakeLists.txt  Passes.h  Passes.td
include/furiosa-mlir/Dialect/: CMakeLists.txt
include/furiosa-mlir/ExecutionEngine/: DeviceRuntime.h  ExecutionEngine.h  JitRunner.h  RenegadeRuntime.h  TensorDescriptor.h
lib/: CMakeLists.txt  InitAll.cpp
lib/Bindings/Python/: DialectFuriosa.cpp  DialectHost.cpp  DialectTask.cpp  ExecutionEngineModule.cpp  FuriosaPasses.cpp  RegisterEverything.cpp
lib/CAPI/Dialect/: CMakeLists.txt  Furiosa.cpp  FuriosaPasses.cpp  Host.cpp
lib/CAPI/ExecutionEngine/: CMakeLists.txt  ExecutionEngine.cpp
lib/CAPI/RegisterEverything/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt
lib/Conversion/FuncToFuriosaHost/: CMakeLists.txt  FuncToFuriosaHost.cpp
lib/Conversion/FuriosaToFuriosaTask/: FuriosaToFuriosaTask.cpp
lib/Conversion/LinalgToFuriosa/: LinalgToFuriosa.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Func/Transforms/: ResultsToParams.cpp
lib/Dialect/Furiosa/IR/: CMakeLists.txt  FuriosaDialect.cpp  FuriosaOps.cpp
lib/Dialect/Furiosa/Transforms/: CMakeLists.txt  Deallocation.cpp  Passes.cpp  PromoteSlicePartitionLoop.cpp
lib/Dialect/Host/IR/: CMakeLists.txt  HostDialect.cpp  HostOps.cpp
lib/Dialect/Linalg/Transforms/: GeneralizeToContractOps.cpp
lib/Dialect/Task/: CMakeLists.txt
lib/ExecutionEngine/: CMakeLists.txt  DeviceRuntime.cpp  ExecutionEngine.cpp  JitRunner.cpp  RenegadeRuntime.cpp  TensorDescriptor.cpp
python/: CMakeLists.txt
python/furiosa-mlir/: compiler.py  execution_engine.py
python/furiosa-mlir/dialects/: furiosa.py  task.py
python/furiosa-mlir/runtime/: np_to_tensor.py
test/Dialect/Furiosa/: address.mlir  converted.mlir  deallocation.mlir  example.mlir  lowered.mlir  optimized.mlir  params.mlir  promoted.mlir
test/Dialect/Host/: example.mlir  host.mlir
test/Dialect/Linalg/: contract.mlir  matmul.mlir  tiled.mlir  transform.mlir
test/Dialect/Tosa/: matmul.mlir
test/python/: compiler.py  execution_engine.py
test/python/dialects/: furiosa.py  host.py
tools/: CMakeLists.txt
tools/furiosa-mlir-opt/: CMakeLists.txt  furiosa-mlir-opt.cpp
tools/furiosa-mlir-runner/: CMakeLists.txt  furiosa-mlir-runner.cpp
tools/furiosa-mlir-translate/: CMakeLists.txt  furiosa-mlir-translate.cpp
tools/furiosa-runner/: CMakeLists.txt  furiosa-runner.cpp
(+111 files in other folders)
